lab1/Test/L1-A-10-87.output
Error Type B at Line 3
Error Type A at Line 10
Error Type B at Line 24
Error Type A at Line 25
Error Type B at Line 26
Error Type B at Line 35
