lab1/Test/L1-A-10-87.cmm
struct vtGJBYdTAPb4mR5ol_X {
  int LOtEKQbbH4JfetnuIJQ , s_iHytT8Ho0Dp [ 74327157 
    ] + ;
  float J03MG0aW7 = o6412Cm4SPF372 || nD && fxipZPFg9h6ciEQY 
    + vgTnYGrpQxU8rNgD / MsXkwGzh4Z ( EMm1VnavsI = fBldjLhKO4V19fUr 
    == bx3D - vqq0dT [ R_hIQSeKrPsFy_gr2H && j1cyxmoLmPuQCpr 
    < LDU_ [ W8_H0c9l && c39gb0zgS > ! ( QBQQEAVouSKDm 
    && gdgKSbFDke2GRZS5m <= e [ jlGqSVU8Jx8ppLK7 = gHR 
    && nJgaIdisP6p0 >= jmcXfn ( zrLyX , Wei && _BKzoxPIDbpg1OlMvXm 
    > 1595566811.1318711787 ) ] * ! ! ! ! ! dL &) ] ] 
    ) . awiRD5dgVi29oBdlOo * - Z ( ) != ! 499730591 ;
}FJZWhjQ ( ) {
}
int ;
int ZxWvKPWjzmc , oRTS 

;
int ;
int ;
struct {
  struct mEIdd q ;
  int u8ANBCrCTEB8NRbawM ;
};
struct reEP2T ( ;
int ';
* int E2UFe1hM621Y5dqk_t25 ( int D , int Jx2miNKeXr3dmDoZfV 
  ) {
{
  }}
int JmXzja ( ) {
  AlYM9RFND56lwQ9HTc5D ;
  J1 ;
  PEX3MzV8MPku0Kh ;
  d1hkkugKesJUXHa ;
  if ( lJuTCwrOy2 while )   mhmOS3SUhCmKEq ;
else   if ( x46EP5_bK )   while ( F )   if ( h4A04smhLc 
    )   WTOqLt ;
else   return P ;




}
